fix: change implementation to support java 8